applications/itsbeginningtolookalotlikechristmas/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: itsbeginningtolookalotlikechristmas
  namespace: itsbeginningtolookalotlikechristmas
spec:
  parentRefs:
    - name: cloudflare-gateway
      namespace: cloudflare-gateway
  hostnames:
    - itsbeginningtolookalotlike.christmas
  rules:
    - backendRefs:
        - name: site
          port: 8080
